[tool.poetry]
name = "p4a-portal"
version = "0.1.0"
description = ""
authors = ["Mikuláš Poul <mikulaspoul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
ujson = "^5.7.0"
requests = "^2.28.1"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.2"
gitpython = "^3.1.30"
gunicorn = "^20.1.0"
sentry-sdk = "^1.14.0"
ipython = "^8.10.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | venv_schemas
    | \.Trash-0
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
